--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "nodemon server.cjs"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
@@ -20,6 +21,7 @@
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.2",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
